Changelog for Gallery.

Gallery 1.2.0
====================================
- [#82] Fix bug where creating Album did not respect parent
- [#85] Add random sorting to albums in GalleryAlbums

Gallery 1.1.1
====================================
- Fix trivial issue with js console error when saving albums

Gallery 1.1.0
====================================
- [#73] Fix issue with absoluteImage galItem issue and gallery.thumbs_prepend_site_url setting
- Fix issue where marking gallery active/prominent did not stick
- [#28], [#64] Gallery items are now stored by albumId/itemId.ext in their directories
- Added showName for GalleryAlbums to toggle whether or not to display Album name
- [#29], [#69] Add batch upload via Zip file to albums
- [#42] Add URL field to galItem object for allowing Items to have URLs that load when you click on them
- [#46] Add imageProperties, thumbProperties properties to all snippets that allow you to pass a JSON object of properties to pass to phpThumb
- Add rowCls property to GalleryAlbums
- [#60] Fix issue with galPhpThumb and image passthru
- [#67] Fix prev lexicon placeholder in Galleriffic plugin
- [#66] Fix issue with album cover xPDO call in GalleryAlbums snippet
- Add total property to Gallery snippet for getPage support
- i18n of Snippet properties

Gallery 1.0.2
====================================
- [#31] Add &gallerifficUseCss parameter for toggling CSS by Galleriffic
- Add cover ability to GalleryAlbums by using rowTpl "galAlbumRowWithCoverTpl"
- Fix issue where Gallery TV albums tree loaded page when clicking on a node

Gallery 1.0.1 (December 20th, 2010)
====================================
- [#54] Added filepath placeholder for getting absolute path of an image, fileurl for absolute URL
- [#12] Make left-click do update-album in mgr tree
- Add additional system setting checks for phpthumb config options.
- *Many* caching improvements to phpthumb-generated thumbnails