@@ -12,6 +12,9 @@ switch ($modx->event->name) {
     case 'OnTVOutputRenderList':
         $modx->event->output($corePath.'elements/tv/output/');
         break;
+    case 'OnTVInputPropertiesList':
+        $modx->event->output($corePath.'elements/tv/inputoptions/');
+        break;
     case 'OnTVOutputRenderPropertiesList':
         $modx->event->output($corePath.'elements/tv/properties/');
         break;
