@@ -20,28 +20,9 @@
  * @package gallery
  */
 /**
- * Events for GalleryCustomTV plugin
- * 
+ * Output TV render for Gallery's GalleryAlbumList TV
+ *
  * @package gallery
- * @subpackage build
+ * @subpackage tv
  */
-$events = array();
-
-$evs = array(
-    'OnTVInputRenderList',
-    'OnTVInputPropertiesList',
-    'OnTVOutputRenderList',
-    'OnTVOutputRenderPropertiesList',
-    'OnDocFormPrerender',
-);
-
-foreach ($evs as $ev) {
-    $events[(string)$ev] = $modx->newObject('modPluginEvent');
-    $events[(string)$ev]->fromArray(array(
-        'event' => (string)$ev,
-        'priority' => 0,
-        'propertyset' => 0,
-    ),'',true,true);
-}
-
-return $events;
+return $value;
