@@ -1,0 +1,51 @@
+<?php
+/**
+ * Gallery
+ *
+ * Copyright 2010-2011 by Shaun McCormick <shaun@modx.com>
+ *
+ * Gallery is free software; you can redistribute it and/or modify it under the
+ * terms of the GNU General Public License as published by the Free Software
+ * Foundation; either version 2 of the License, or (at your option) any later
+ * version.
+ *
+ * Gallery is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
+ * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * Gallery; if not, write to the Free Software Foundation, Inc., 59 Temple
+ * Place, Suite 330, Boston, MA 02111-1307 USA
+ *
+ * @package gallery
+ */
+/**
+ * Custom TV English Lexicon Entries for Gallery TVs
+ *
+ * @package gallery
+ * @subpackage lexicon
+ */
+$_lang['galtv.ascending'] = 'Ascending';
+$_lang['galtv.descending'] = 'Descending';
+$_lang['galtv.limit'] = 'Limit';
+$_lang['galtv.limit_desc'] = 'The number of Gallery Albums to limit. Set to 0 to show all.';
+$_lang['galtv.listwidth'] = 'Dropdown Width';
+$_lang['galtv.listwidth_desc'] = 'The width of the combobox dropdown, in pixels.';
+$_lang['galtv.maxheight'] = 'Dropdown Max Height';
+$_lang['galtv.maxheight_desc'] = 'Maximum height of the dropdown list for the combobox.';
+$_lang['galtv.name'] = 'Name';
+$_lang['galtv.parent'] = 'Parent Album';
+$_lang['galtv.parent_desc'] = 'If set, will use only the albums that are direct children of the specified album ID. Set to blank to show all, 0 to show only top-level albums.';
+$_lang['galtv.rank'] = 'Rank';
+$_lang['galtv.showcover'] = 'Show Cover';
+$_lang['galtv.showcover_desc'] = 'Show a thumbnail of the cover next to each album.';
+$_lang['galtv.shownone'] = 'Show None Option';
+$_lang['galtv.shownone_desc'] = 'Show a "None" option that can be selected for a blank value.';
+$_lang['galtv.sort'] = 'Sort By';
+$_lang['galtv.sort_desc'] = 'The field to sort the albums by.';
+$_lang['galtv.sortdir'] = 'Sort Direction';
+$_lang['galtv.sortdir_desc'] = 'The direction to sort the albums by.';
+$_lang['galtv.start'] = 'Start Index';
+$_lang['galtv.start_desc'] = 'If limit is greater than 0, will start at this index.';
+$_lang['galtv.width'] = 'Width';
+$_lang['galtv.width_desc'] = 'The width of the combobox, in pixels.';
